1.2gb-content/kubernetes-master-copy/test/e2e/testing-manifests/ingress/neg/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname
spec:
  defaultBackend:
    service:
      name: hostname
      port:
        number: 80
# ID-1768294452-fae1fc5b
