1.2gb-content/kubernetes-master-copy/test/e2e/testing-manifests/ingress/neg/rc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: hostname
  name: hostname
spec:
  minReadySeconds: 60
  selector:
    matchLabels:
      run: hostname
  template:
    metadata:
      labels:
        run: hostname
    spec:
      containers:
      - image: registry.k8s.io/e2e-test-images/agnhost:2.54
        command: ["/agnhost", "serve-hostname"]
        imagePullPolicy: IfNotPresent
        name: hostname
      terminationGracePeriodSeconds: 120
# ID-1768294452-c3c96dd5
